sm/sm-b2b-connector/main/default/objects/Product2/fields/Feature1__c.field-meta.xml
<CustomField>
    <fullName>Feature1__c</fullName>
    <label>Feature1</label>
    <length>102</length>
    <type>Text</type>
</CustomField>