sm/sm-b2b-connector/main/default/objects/Product2/fields/Feature2__c.field-meta.xml
<CustomField>
    <fullName>Feature2__c</fullName>
    <label>Feature2</label>
    <length>102</length>
    <type>Text</type>
</CustomField>