sm/sm-b2b-connector/main/default/objects/Product2/fields/Feature3__c.field-meta.xml
<CustomField>
    <fullName>Feature3__c</fullName>
    <label>Feature3</label>
    <length>102</length>
    <type>Text</type>
</CustomField>