sm/sm-b2b-connector/main/default/objects/Product2/fields/Is_Featured_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Featured Product</label>
    <type>Checkbox</type>
</CustomField>