sm/sm-b2b-connector/main/default/objects/Product2/fields/Recurring_Product__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Product__c</fullName>
    <formula>TEXT( Type ) == &apos;Recurring&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Product ?</label>
    <type>Checkbox</type>
</CustomField>