sm/sm-b2b-connector/main/default/objects/Product2/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <label>Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reliability</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Compatibility</fullName>
            </value>
            <value>
                <fullName>Maintainability</fullName>
            </value>
            <value>
                <fullName>Transferability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>